# yodau

./: .SRCINFO  .clang-format  .gitignore  CMakeLists.txt  Doxyfile  PKGBUILD  citation.cff  license  readme.md
.github/: SECURITY.md  renovate.json
.github/workflows/: auto-tag.yml  codeql.yml  html.yml  tests.yml
backend/: readme.md
backend/include/: cli_client.hpp  coords.hpp  event.hpp  frame.hpp  geometry.hpp  opencv_cli.hpp  opencv_client.hpp  stream.hpp  stream_manager.hpp  tripwire_grid.hpp  tripwire_grid_index.hpp  tripwire_grid_stream_index.hpp
backend/src/: cli_client.cpp  coords.cpp  geometry.cpp  main.cpp  opencv_cli.cpp  opencv_client.cpp  stream.cpp  stream_manager.cpp  tripwire_grid.cpp  tripwire_grid_index.cpp  tripwire_grid_stream_index.cpp
backend/tests/: stream_manager_tests.cpp
docs/: coverage.dox
frontend/include/: main_window.hpp  stream_controller.hpp
frontend/include/helpers/: controller.hpp  icon_loader.hpp  str_label.hpp
frontend/include/widgets/: board.hpp  carousel_view.hpp  grid_view.hpp  settings_panel.hpp  stream_cell.hpp  view_zone.hpp
frontend/src/: main.cpp  main_window.cpp  stream_controller.cpp
frontend/src/helpers/: controller.cpp  icon_loader.cpp
frontend/src/widgets/: board.cpp  carousel_view.cpp  grid_view.cpp  settings_panel.cpp  stream_cell.cpp  view_zone.cpp
frontend/tests/: main.cpp  main_window_tests.cpp
frontend/tests/include/: main_window_tests.hpp
